--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,95 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- PON UN FAVICON!!! -->
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon-32x32.png"
+      type="image/png"
+    />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CAMBIA EL TITLE!!! -->
-    <title>Vite Template</title>
+    <title>interactive-card</title>
   </head>
   <body>
-    <div class="card">
-      <h1 class="card__title">Título</h1>
-      <p class="card__text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quis
-        mollitia sequi, quae voluptatem, eligendi, nam repudiandae cupiditate ad
-        consequatur natus omnis ducimus pariatur excepturi in magni voluptas
-        repellat quasi?
-      </p>
-      <a class="card__button" href="">boton</a>
-    </div>
-    <script type="module" src="./js/index.js"></script>
+    <main>
+      <div class="card-container">
+        <div class="card card--front">
+          <img
+            class="card__logo"
+            src="./assets/images/card-logo.svg"
+            alt="card logo"
+          />
+          <span id="card-number" class="card__number">0000 0000 0000 0000</span>
+          <div class="card__footer-info">
+            <span id="card-name" class="card__name">JANE APPLESEED</span>
+            <div class="card__date">
+              <span id="card-month" class="card__month">00</span>
+              <span>/</span> <span id="card-year" class="card__year">00</span>
+            </div>
+          </div>
+        </div>
+        <div class="card card--back">
+          <span id="card-cvc" class="card__cvc">000</span>
+        </div>
+      </div>
+      <form id="form" class="form">
+        <div class="form__field">
+          <label for="name" class="form__label">CARDHOLDER NAME</label>
+          <input
+            type="text"
+            class="form__input"
+            id="name"
+            name="name"
+            placeholder="e.g. Jane Appleseed"
+          />
+          <p class="form__error"></p>
+        </div>
+        <div class="form__field">
+          <label for="number" class="form__label">CARD NUMBER</label>
+          <input
+            type="text"
+            class="form__input"
+            id="number"
+            name="number"
+            placeholder="e.g. 1234 5678 9123 0000"
+          />
+          <p class="form__error"></p>
+        </div>
+        <div class="form__row">
+          <div class="form__field">
+            <label class="form__label">EXP. DATE (MM/YY)</label>
+            <div class="form__field form__field--row">
+              <input
+                type="text"
+                class="form__input form__input--small"
+                id="month"
+                name="month"
+                placeholder="MM"
+              />
+              <input
+                type="text"
+                class="form__input form__input--small"
+                id="year"
+                name="year"
+                placeholder="YY"
+              />
+            </div>
+            <p class="form__error"></p>
+          </div>
+          <div class="form__field">
+            <label for="cvc" class="form__label">CVC</label>
+            <input
+              type="text"
+              class="form__input form__input--medium"
+              id="cvc"
+              name="cvc"
+              placeholder="e.g. 123"
+            />
+            <p class="form__error"></p>
+          </div>
+        </div>
+        <input type="submit" class="form__submit" value="Confirm" />
+      </form>
+    </main>
   </body>
 </html>
